# california-housing-neural-network

./: POETRY.md  README.md  main.py  plot_data.sh  pyproject.toml  run.sh
config/: config.py
data/: data_loader.py
model/: housing_net.py  linear_reg.py  xg_boost.py
training/: trainer.py
visualisation/: __init__.py  histogram.py
